--- a/GuessingGame/Base.lproj/Main.storyboard
+++ b/GuessingGame/Base.lproj/Main.storyboard
@@ -18,21 +18,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ujs-gJ-9Kw">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ujs-gJ-9Kw">
                                 <rect key="frame" x="139" y="444" width="43" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Guess"/>
                                 <connections>
                                     <action selector="guessSubmitted:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Rs7-XN-VcI"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DUR-GN-knY">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DUR-GN-knY">
                                 <rect key="frame" x="112" y="386" width="97" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="13" translatesAutoresizingMaskIntoConstraints="NO" id="6SR-IR-YL0">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="13" translatesAutoresizingMaskIntoConstraints="NO" id="6SR-IR-YL0">
                                 <rect key="frame" x="16" y="57" width="288" height="86"/>
                                 <string key="text">I'm thinking of a number.
 Guess it!</string>
@@ -43,9 +42,13 @@ Guess it!</string>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="6SR-IR-YL0" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="37" id="0NF-Lm-3Il"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="DUR-GN-knY" secondAttribute="trailing" constant="111" id="3Uk-ic-sza"/>
+                            <constraint firstItem="ujs-gJ-9Kw" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="8SV-11-edD"/>
                             <constraint firstItem="6SR-IR-YL0" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="9zd-pY-YOh"/>
                             <constraint firstItem="DUR-GN-knY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="112" id="FBm-Fr-GOG"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="DUR-GN-knY" secondAttribute="bottom" constant="152" id="Uet-Bo-9H9"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ujs-gJ-9Kw" secondAttribute="bottom" constant="94" id="sD7-Rn-nTM"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
